# django_library_workshop

./: .gitignore  Dockerfile  README.md  data.json  docker-compose.yml  entrypoint.sh  pyproject.toml
django_library/: settings.py  urls.py
