[tool.poetry]
name = "django-library"
version = "0.1.0"
description = "Sistema de gestión de biblioteca con Django"
authors = ["David Ibáñez <dibanez@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
django = "^5.0"
psycopg2-binary = "^2.9.9"
python-dotenv = "^1.0.0"
dj-database-url = "^2.1.0"
djangorestframework = "^3.14.0"
drf-spectacular = "^0.27.0"

[tool.poetry.dev-dependencies]
pytest = "^7.4.3"
pytest-django = "^4.7.0"
coverage = "^7.3.2"
black = "^23.11.0"
isort = "^5.12.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
